<resources>
    <string name="app_name">My Application</string>
    <string name="page_title">page title\n</string>
    <string name="film_poster">film poster</string>
    <string name="poster_2">poster_2</string>
    <string name="poster_3">poster_3</string>
    <string name="poster_4">poster 4\n</string>
    <string name="picher">picher</string>
    <string name="floating_button">floating button</string>
    <string name="favorites">favorites</string>
    <string name="watch_later">watch_later</string>
    <string name="selection">selection</string>
    <string name="settings">settings</string>
    <string name="disclaimer">disclimer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="long_text">Long text\n</string>
    <string name="details_favorite">Details Favorite</string>
</resources>